# steve

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
.github/workflows/: tests.yaml
ai_agent/: main.py
ai_agent/agents/: base.py
ai_agent/agents/analysis/: analysis_agent.py
ai_agent/agents/execution/: Dockerfile  bash_agent.py
ai_agent/agents/planning/: planning_agent.py
ai_agent/agents/research/: Dockerfile  __init__.py  main.py  research_agent.py
ai_agent/api/: routes.py
ai_agent/core/: agent_manager.py  message_bus.py  security_manager.py  state_manager.py  task_manager.py
ai_agent/sandbox/browser/: secure_browser.py
docs/projects/: 20241108_IMPLEMENTATION_PLAN.md
docs/specs/: 00_AI_AGENT_ORIGIN_PROMPT.md  01_AI_AGENT_CORE_ARCHITECTURE.md  02_AI_AGENT_IMPLEMENTATION_DETAILS.md  03_AI_AGENT_TASK_MGMT_AND_OPERATIONS.md  04_AI_AGENT_APIS_AND_ADVANCED_FEATURES.md  05_AI_AGENT_SECURITY_AND_MAINTENANCE.md  06_AI_AGENT_DEVELOPMENT_AND_DOCUMENTATION.md  07_AI_AGENT_OPERATIONS_AND_MAINTENANCE.md  08_AI_AGENT_ARCHITECTURE_DECISIONS_AND MVP.md  08_AI_AGENT_DESIGN_CLARIFICATIONS.md  DIAGRAM_OVERALL_SYSTEM_ARCHITECTURE.md
scripts/: export_code.py  scaffold.py
tests/: conftest.py
tests/unit/: test_bash_agent.py  test_planning_agent.py  test_research_agent.py
