[tool.poetry]
name = "ai_agent"
version = "0.1.0"
description = "AI Agent Project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "ai_agent"}]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
pydantic = ">=2.0.0"
redis = ">=4.5.0"
aiohttp = ">=3.8.0"
python-dotenv = ">=0.19.0"
uvicorn = ">=0.15.0"
fastapi = ">=0.68.0"
docker = ">=6.1.2"
psutil = ">=5.8.0"
langchain = ">=0.0.200"
crewai = ">=0.1.0"
selenium = ">=4.10.0"
undetected-chromedriver = ">=3.5.0"
fake-useragent = ">=1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.18.0"
pytest-cov = ">=2.12.0"
black = ">=22.3.0"
isort = ">=5.10.1"
mypy = ">=0.981"
pylint = ">=2.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
strict = true
